idea-plugin/src/main/java/com/palantir/gradle/versions/intellij/VersionProps.bnf
/*
 * (c) Copyright 2024 Palantir Technologies Inc. All rights reserved.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

{
  parserClass="com.palantir.gradle.versions.intellij.parser.VersionPropsParser"

  extends="com.intellij.extapi.psi.ASTWrapperPsiElement"

  psiClassPrefix="VersionProps"
  psiImplClassSuffix="Impl"
  psiPackage="com.palantir.gradle.versions.intellij.psi"
  psiImplPackage="com.palantir.gradle.versions.intellij.psi.impl"

  elementTypeHolderClass="com.palantir.gradle.versions.intellij.psi.VersionPropsTypes"
  elementTypeClass="com.palantir.gradle.versions.intellij.psi.VersionPropsElementType"
  tokenTypeClass="com.palantir.gradle.versions.intellij.psi.VersionPropsTokenType"
}

simpleFile ::= item_*

private item_ ::= (property | COMMENT | CRLF)

property ::= dependencyGroup COLON dependencyName EQUALS dependencyVersion

dependencyGroup ::= GROUP_PART (DOT GROUP_PART)*
dependencyName ::= NAME_KEY
dependencyVersion ::= VERSION
